LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status__c</fullName>
    <label>Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>