LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Annual_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Budget__c</fullName>
    <formula>Campaign_Budget__r.Annual_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>