LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Budget__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Campaign Budget</label>
    <referenceTo>Campaign_Budget__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>