LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Feedback__c</fullName>
    <label>Campaign Feedback</label>
    <type>TextArea</type>
</CustomField>