LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Id</label>
    <type>Text</type>
</CustomField>