LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Campaign Manager can only be from Markcom Team</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>GT Marcom Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>