LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Campaign Owner can only be T1 user.</errorMessage>
        <filterItems>
            <field>User.EMP_Tier__c</field>
            <operation>equals</operation>
            <value>T1</value>
        </filterItems>
        <infoMessage>User with T1 designation only.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignsOwner</relationshipName>
    <type>Lookup</type>
</CustomField>