LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Request__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Request</label>
    <referenceTo>Campaign_Request__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>