LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Campaign_Requester__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requested_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>