LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>