LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Cancellation_Required__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Required</label>
    <type>Checkbox</type>
</CustomField>