LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/End_Goal__c.field-meta.xml
<CustomField>
    <fullName>End_Goal__c</fullName>
    <label>End Goal</label>
    <type>TextArea</type>
</CustomField>