LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Is_User_Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Campaign_Manager__c</fullName>
    <formula>Campaign_Manager__c ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Campaign Manager</label>
    <type>Checkbox</type>
</CustomField>