LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>