LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/IsEndDateNearBy__c.field-meta.xml
<CustomField>
    <fullName>IsEndDateNearBy__c</fullName>
    <formula>EndDate = Today()+ 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEndDateNearBy</label>
    <type>Checkbox</type>
</CustomField>