LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <formula>Campaign_Budget__r.WCGTProjectID__c</formula>
    <label>Job Code</label>
    <type>Text</type>
</CustomField>