LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Remaining_annual_budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_annual_budget__c</fullName>
    <formula>Campaign_Budget__r.Remaining_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining annual budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>