LinKreta_POC_Repository/force-app/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>80</length>
    <type>Text</type>
</CustomField>